force-app/main/default/objects/Bank_Credit_Alert__c/Bank_Credit_Alert__c.object-meta.xml
<CustomObject>
    <description>One inbound Axis Bank credit-alert email. Created by AxisCreditAlertHandler; matched alerts also create a Client Payment.</description>
    <label>Bank Credit Alert</label>
    <nameField>
        <displayFormat>BCA-{0000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Credit Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>