force-app/main/default/objects/Bank_Credit_Alert__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Credit Alerts</relationshipLabel>
    <relationshipName>Bank_Credit_Alerts</relationshipName>
</CustomField>