force-app/main/default/objects/Bank_Credit_Alert__c/fields/Client_Payment__c.field-meta.xml
<CustomField>
    <fullName>Client_Payment__c</fullName>
    <label>Client Payment</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Client_Payment__c</referenceTo>
    <relationshipLabel>Bank Credit Alerts</relationshipLabel>
    <relationshipName>Bank_Credit_Alerts</relationshipName>
</CustomField>