force-app/main/default/objects/Bank_Credit_Alert__c/fields/Credited_At__c.field-meta.xml
<CustomField>
    <fullName>Credited_At__c</fullName>
    <label>Credited At</label>
    <type>DateTime</type>

</CustomField>