force-app/main/default/objects/Bank_Credit_Alert__c/fields/Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Reason__c</fullName>
    <label>Match Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>