force-app/main/default/objects/Bank_Credit_Alert__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <label>Payer Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>