force-app/main/default/objects/Bank_Credit_Alert__c/fields/Raw_Body__c.field-meta.xml
<CustomField>
    <fullName>Raw_Body__c</fullName>
    <label>Raw Body</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>