force-app/main/default/objects/Bank_Credit_Alert__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <type>Text</type>
    <length>120</length>
</CustomField>