force-app/main/default/objects/Bank_Credit_Alert__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <label>Sale</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Bank Credit Alerts</relationshipLabel>
    <relationshipName>Bank_Credit_Alerts</relationshipName>
</CustomField>