force-app/main/default/objects/Bank_Credit_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Matched</fullName><default>false</default><label>Matched</label></value>
            <value><fullName>Needs Review</fullName><default>true</default><label>Needs Review</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
            <value><fullName>Not a Credit</fullName><default>false</default><label>Not a Credit</label></value>
            <value><fullName>Resolved Manually</fullName><default>false</default><label>Resolved Manually</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>