force-app/main/default/objects/Bank_Credit_Alert__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Email Subject</label>
    <type>Text</type>
    <length>255</length>
</CustomField>