force-app/main/default/objects/Bank_Credit_Alert__c/fields/Transaction_Info__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Info__c</fullName>
    <label>Transaction Info</label>
    <type>Text</type>
    <length>255</length>
</CustomField>