force-app/main/default/objects/Bank_Credit_Alert__c/fields/UTR__c.field-meta.xml
<CustomField>
    <fullName>UTR__c</fullName>
    <label>UTR / Reference</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>40</length>
    <unique>true</unique>
</CustomField>