force-app/main/default/objects/Bank_Credit_Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Sale__c</columns>
    <columns>Credited_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>