force-app/main/default/objects/Bank_Credit_Alert__c/listViews/Needs_Review.listView-meta.xml
<ListView>
    <fullName>Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payer_Name__c</columns>
    <columns>Remark__c</columns>
    <columns>Credited_At__c</columns>
    <columns>Match_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <label>Needs Review</label>
</ListView>